--- a/AutoMall/ViewControllers/Upkeep/UpkeepPlanNormalCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepPlanNormalCell.xib
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="机油更换" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tuv-ND-8Qm">
-                        <rect key="frame" x="8" y="12" width="61.5" height="21"/>
+                        <rect key="frame" x="16" y="12" width="61.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="bUE-iQ-P6l"/>
                         </constraints>
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥666" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRY-Io-3A4">
-                        <rect key="frame" x="276.5" y="12" width="35.5" height="21"/>
+                        <rect key="frame" x="268.5" y="12" width="35.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="DsW-50-hRM"/>
                         </constraints>
@@ -40,11 +40,15 @@
                 <constraints>
                     <constraint firstItem="tuv-ND-8Qm" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="R8O-DY-7hM"/>
                     <constraint firstItem="PRY-Io-3A4" firstAttribute="centerY" secondItem="tuv-ND-8Qm" secondAttribute="centerY" id="ase-J8-bF0"/>
-                    <constraint firstItem="tuv-ND-8Qm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="bfU-y0-msV"/>
-                    <constraint firstAttribute="trailing" secondItem="PRY-Io-3A4" secondAttribute="trailing" constant="8" id="nSh-Ig-rbh"/>
+                    <constraint firstItem="tuv-ND-8Qm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="bfU-y0-msV"/>
+                    <constraint firstAttribute="trailing" secondItem="PRY-Io-3A4" secondAttribute="trailing" constant="16" id="nSh-Ig-rbh"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-85" y="59"/>
+            <connections>
+                <outlet property="contentL" destination="PRY-Io-3A4" id="TcL-se-UMf"/>
+                <outlet property="declareL" destination="tuv-ND-8Qm" id="yd7-Yf-l9K"/>
+            </connections>
+            <point key="canvasLocation" x="-394" y="48"/>
         </tableViewCell>
     </objects>
 </document>
