--- a/AutoMall/ViewControllers/Upkeep/AddCarInfoCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AddCarInfoCell.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,11 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="车主姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1dK-aC-Ttn">
-                        <rect key="frame" x="8" y="11" width="61.5" height="21"/>
+                        <rect key="frame" x="16" y="11" width="61.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="hRE-5w-8S9"/>
                         </constraints>
@@ -29,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="627-dC-Rnq">
-                        <rect key="frame" x="77.5" y="6" width="234.5" height="30"/>
+                        <rect key="frame" x="85.5" y="6" width="226.5" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="dUf-KT-bWq"/>
                         </constraints>
@@ -44,9 +43,9 @@
                 <constraints>
                     <constraint firstItem="1dK-aC-Ttn" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4bL-z7-WhP"/>
                     <constraint firstItem="627-dC-Rnq" firstAttribute="leading" secondItem="1dK-aC-Ttn" secondAttribute="trailing" constant="8" id="6yd-zh-KwP"/>
-                    <constraint firstItem="1dK-aC-Ttn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="CDM-F2-oHR"/>
                     <constraint firstItem="627-dC-Rnq" firstAttribute="centerY" secondItem="1dK-aC-Ttn" secondAttribute="centerY" id="Rmm-tI-fF3"/>
                     <constraint firstAttribute="trailing" secondItem="627-dC-Rnq" secondAttribute="trailing" constant="8" id="TY8-HN-T7J"/>
+                    <constraint firstItem="1dK-aC-Ttn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="bjY-g4-Akv"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
