--- a/AutoMall/ViewControllers/Upkeep/BaoyangDiscountsVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/BaoyangDiscountsVC.xib
@@ -9,9 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UpkeepPlanVC">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaoyangDiscountsVC">
             <connections>
-                <outlet property="myTableView" destination="KZ0-4I-1KH" id="bzR-fp-2nr"/>
+                <outlet property="myTableView" destination="Va1-pX-bnP" id="H3f-Ig-i4N"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,38 +20,38 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="KZ0-4I-1KH">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Va1-pX-bnP">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="Auo-VX-XTa"/>
-                        <outlet property="delegate" destination="-1" id="SSZ-DP-sPe"/>
+                        <outlet property="dataSource" destination="-1" id="EKR-48-cUM"/>
+                        <outlet property="delegate" destination="-1" id="YCs-yy-Uzy"/>
                     </connections>
                 </tableView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sjy-4X-reG">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfn-mo-w44">
                     <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                     <color key="backgroundColor" red="0.98431372549999996" green="0.2666666667" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="44" id="scM-Ns-UvE"/>
+                        <constraint firstAttribute="height" constant="44" id="eEG-Sb-fvk"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <state key="normal" title="确认"/>
+                    <state key="normal" title="保存"/>
                     <connections>
-                        <action selector="confirmAction:" destination="-1" eventType="touchUpInside" id="ZTo-US-p8X"/>
+                        <action selector="saveAction:" destination="-1" eventType="touchUpInside" id="057-RW-E3I"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Sjy-4X-reG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EdI-kw-ntM"/>
-                <constraint firstItem="KZ0-4I-1KH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Lv8-SS-bTS"/>
-                <constraint firstItem="KZ0-4I-1KH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ope-wH-I2w"/>
-                <constraint firstAttribute="trailing" secondItem="Sjy-4X-reG" secondAttribute="trailing" id="R3K-2f-v62"/>
-                <constraint firstAttribute="trailing" secondItem="KZ0-4I-1KH" secondAttribute="trailing" id="RYz-2I-NFC"/>
-                <constraint firstItem="Sjy-4X-reG" firstAttribute="top" secondItem="KZ0-4I-1KH" secondAttribute="bottom" id="VTp-Mf-68N"/>
-                <constraint firstAttribute="bottom" secondItem="Sjy-4X-reG" secondAttribute="bottom" id="n2l-za-5Rv"/>
+                <constraint firstItem="cfn-mo-w44" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1mz-eB-J7K"/>
+                <constraint firstAttribute="trailing" secondItem="cfn-mo-w44" secondAttribute="trailing" id="AVg-YB-Cnz"/>
+                <constraint firstItem="cfn-mo-w44" firstAttribute="top" secondItem="Va1-pX-bnP" secondAttribute="bottom" id="Gt8-Mf-QcV"/>
+                <constraint firstAttribute="bottom" secondItem="cfn-mo-w44" secondAttribute="bottom" id="Ldu-BS-apD"/>
+                <constraint firstItem="Va1-pX-bnP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="XR7-pD-OAQ"/>
+                <constraint firstItem="Va1-pX-bnP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rS3-LA-7QD"/>
+                <constraint firstAttribute="trailing" secondItem="Va1-pX-bnP" secondAttribute="trailing" id="xOg-iu-RDv"/>
             </constraints>
-            <point key="canvasLocation" x="-295.5" y="60.5"/>
+            <point key="canvasLocation" x="-657" y="62"/>
         </view>
     </objects>
 </document>
